<resources>
    <string name="app_name">Localisation testing</string>
    <string name="text1">Why are you studying English?</string>
    <string name="text2">Can I help you?</string>
    <string name="text3">HOW WAS THE PARTY?</string>
    <string name="text4">It was a good time.</string>
    <string name="dark_mode" translatable="false">dark mode</string>
    <string name="change_app_theme" translatable="false">Change App Theme</string>
    <string name="lightmode" translatable="false">Switch to Light Mode</string>
    <string name="darkmode" translatable="false">Switch to Dark Mode</string>
    <string name="change_language" translatable="false">Change Language</string>
    <string-array name="langList">
        <item name="Hindi" />
        <item name="Punjabi" />
        <item name="Bengali" />
    </string-array>
</resources>